// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-0" data 1`] = `
"// Works for OccurrenceOrderPlugin
module.exports = {}
"
`;

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-1" data 1`] = `
"// Works for DedupePlugin
module.exports = {}
"
`;

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-2" data 1`] = `
"// Doesn't remove unmatched plugins
module.exports = {
    plugins: [new webpack.optimize.UglifyJsPlugin()]
}
"
`;
